[tool.poetry]
name = "teleword"
version = "0.1.0"
description = "Single-file Telegram mini-client using vanilla Python."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"
ipdb = "^0.13.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
