[project]
name = "teleword"
version = "0.1.0"
description = "Single-file Telegram mini-client using vanilla Python."
authors = [
    { name = "Kirill Borisov", email = "lensvol@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.2"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "ruff>=0.0.292",
    "ipdb>=0.13.13",
]

[tool.hatch.metadata]
allow-direct-references = true
